# clay

./: Cargo.toml  Justfile  LICENSE-MIT  README.md
crates/frontend/: Cargo.toml
crates/frontend/samples/: glob_test.fir  main.fir  test1.out  test10.fir  test11.fir  test11.out  test12.fir  test12.out  test13.fir  test13.out  test14.fir  test14.out  test15.fir  test15.out  test16.fir  test16.out  test17.fir  test18.fir  test19.fir  test19.out  test2.out  test20.fir  test21.fir  test21.out  test22.fir  test23.fir  test24.fir  test25.fir  test26.fir  test27.fir  test28.fir  test29.fir  test29.out  test3.fir  test3.out  test30.fir  test31.fir  test32.fir  test33.fir  test34.fir  (+12 more)
crates/frontend/src/: flags.rs  lib.rs  main.rs
crates/frontend/src/base/: arena.rs  diag.rs  mod.rs  session.rs
crates/frontend/src/base/analysis/: debruijn.rs  memo.rs  mod.rs  resolver.rs  spanned.rs
crates/frontend/src/base/syntax/: mod.rs  parser.rs  pratt.rs  span.rs  symbol.rs
crates/frontend/src/parse/: mod.rs
crates/frontend/src/parse/ast/: keyword.rs  mod.rs  parser.rs  syntax.rs
crates/frontend/src/parse/lower/: driver.rs  modules.rs
crates/frontend/src/parse/token/: mod.rs  parser.rs  syntax.rs
crates/frontend/src/semantic/: mod.rs
crates/frontend/src/semantic/analysis/: driver.rs  mod.rs  tcx.rs  wf.rs
crates/frontend/src/semantic/infer/: coherence.rs  mod.rs  universe.rs
crates/frontend/src/semantic/lower/: attr.rs  bootstrap.rs  entry.rs  func.rs  generics.rs  mod.rs  types.rs  utils.rs
crates/frontend/src/semantic/syntax/: attr.rs  body.rs  func.rs  mod.rs  modules.rs  spanned.rs  tcx.rs  types.rs
crates/frontend/src/typeck/: mod.rs
crates/frontend/src/typeck/analysis/: mod.rs  tcx.rs  traits.rs  tyops.rs  typeck.rs  wf.rs
crates/frontend/src/typeck/lower/: driver.rs  entry.rs  mod.rs  types.rs
crates/frontend/src/typeck/syntax/: body.rs  hir.rs  mir.rs  mod.rs  modules.rs  type_mir.rs  types.rs
crates/frontend/src/utils/: mod.rs
crates/frontend/src/utils/hash/: alias.rs  mod.rs
crates/frontend/src/utils/lang/: const_ops.rs  extension.rs  format.rs  iterator.rs  match_pair.rs  mod.rs  stack_ops.rs  steal_rc.rs
crates/frontend/src/utils/mem/: cell_vec.rs  handle.rs  mapped_rc.rs  mod.rs
crates/frontend/uitest/: Cargo.toml
crates/frontend/uitest/res/legacy/: test1.out  test11.out  test12.out  test13.out  test14.fir  test14.out  test15.out  test16.fir  test16.out  test18.out  test19.out  test2.fir  test2.out  test20.fir  test21.out  test22.out  test23.fir  test24.fir  test24.out  test26.out  test27.out  test28.fir  test28.out  test3.out  test30.out  test32.out  test33.out  test34.out  test35.out  test4.out  test5.out  test6.out  test7.out  test8.out
crates/frontend/uitest/res/lower/: unsupported_labels.fir  unsupported_labels.out
crates/frontend/uitest/res/typecheck/: block_missing_trailing_expr.out  label_demand_coercion.fir  panic.fir
crates/frontend/uitest/tests/: uitest.rs
crates/frontend/uitests/: Cargo.toml
crates/frontend/uitests/res/typecheck/: block_missing_trailing_expr.fir  block_missing_trailing_expr.out
crates/frontend/uitests/tests/: uitest.rs
crates/mir/: Cargo.toml
crates/mir/filetests/: Cargo.toml  build.rs
crates/mir/filetests/src/: lib.rs
crates/mir/filetests/tests/: main.rs
crates/mir/filetests/tests/generics/: generic_list_sum.mir
crates/mir/filetests/tests/invalid_programs/: assoc_func_signature.mir  invalid_block_args.mir  invalid_operands_int_add.mir  invalid_return_value.mir  jump_to_entry_block.mir  multiple_block_terminators.mir  unsatisfied_trait_bound.mir  unsatisfied_trait_bound_trait_dispatch.mir  unterminated_block.mir
crates/mir/filetests/tests/loop_analysis/: nested_loop.mir  nested_loop.mir.expected  simple_loop.mir  simple_loop.mir.expected
crates/mir/filetests/tests/parser/: constants.mir  conversions.mir  function_calls.mir  lists.mir  real_ops.mir  simple.mir  simple.mir.expected  structs.mir
crates/mir/filetests/tests/ssa_construction/: argument_threading_many_blocks.mir  argument_threading_many_blocks.mir.expected  (+6 more)
crates/mir/src/: builder.rs  example  formatter.rs  instr.rs  ir.rs  lib.rs  module.rs  parser.rs  passes.rs  trait_resolution.rs  validation.rs
crates/mir/src/ir/: adt.rs  constant.rs  context.rs  func.rs  instr.rs  trait_.rs  typ.rs  type_param.rs
crates/mir/src/passes/: loop_analysis.rs  ssa.rs
crates/mir/src/validation/: cfg_integrity.rs  ssa.rs  typecheck.rs  value_initialization.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: engine.rs  error.rs  gc.rs  gc_impl.rs  interpreter.rs  lib.rs  ptr.rs  type_registry.rs  value.rs
crates/runtime/src/gc_impl/: simple.rs
crates/runtime/src/interpreter/: stack.rs  stack_map.rs
crates/runtime/tests/: interp.rs
(+174 files in other folders)
