[workspace]
members = ["crates/mir"]
resolver = "2"

[workspace.dependencies]
cranelift-entity = "0.124"
hashbrown = "0.16"
compact_str = "0.9"
parking_lot = "0.12"
thread_local = "1"
crossbeam-utils = "0.8"
bytemuck = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
portable-atomic = "1"

zyon-mir = { path = "crates/mir" }
#zyon-runtime = { path = "crates/runtime" }
