[workspace]
members = ["crates/core", "crates/mir", "crates/mir/filetests"]
resolver = "3"

[workspace.dependencies]
cranelift-entity = "0.124"
hashbrown = "0.16"
compact_str = "0.9"
parking_lot = "0.12"
thread_local = "1"
crossbeam-utils = "0.8"
bytemuck = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
indoc = "2"
portable-atomic = "1"
indexmap = "2"
salsa = { git = "https://github.com/caelunshun/salsa", branch = "cranelift-entity-update-impl", features = [
    "compact_str",
    "cranelift-entity",
] }
bumpalo = "3"
quote = "1"
syn = "2"
proc-macro2 = "1"
pretty_assertions = "1"

fir-core = { path = "crates/core" }
fir-mir = { path = "crates/mir" }
#fir-runtime = { path = "crates/runtime" }
