[workspace]
resolver = "3"
members = [
    "crates/codegen",
    "crates/core",
    "crates/frontend",
    "crates/mir",
    "crates/mir/filetests",
    "crates/runtime",
]

[workspace.dependencies]
#fir-runtime = { path = "crates/runtime" }
allocator-api2 = "0.2"                                                    # needs to match hashbrown
bumpalo = { version = "3", features = ["collections", "allocator-api2"] }
bytemuck = { version = "1", features = ["derive"] }
compact_str = "0.9"
cranelift-entity = "0.125"
crossbeam-utils = "0.8"
derive-where = "1.6.0"
fir-core = { path = "crates/core" }
fir-mir = { path = "crates/mir" }
hashbrown = "0.16"
indexmap = "2"
indoc = "2"
parking_lot = "0.12"
portable-atomic = "1"
pretty_assertions = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"
thiserror = "2"
thread_local = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.dependencies.salsa]
git = "https://github.com/caelunshun/salsa"
branch = "cranelift-entity-update-impl"
features = ["compact_str", "cranelift-entity"]
