[package]
name = "fir-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.4"
bumpalo = "3.17.0"
codespan-reporting = "0.11.1"
derive-where = "1.3.0"
disjoint = "0.8.0"
hashbrown = "0.16.0"
index_vec = "0.1.4"
indexmap.workspace = true
paste = "1.0.15"
rustc-hash = "2.1.1"
scopeguard = "1.2.0"
termcolor = "1.4.1"
thiserror = "2.0.12"
unicode-xid = "0.2.6"
