[package]
name = "fir-mir"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift-entity.workspace = true
hashbrown.workspace = true
compact_str.workspace = true
bytemuck.workspace = true
fir-core.workspace = true
salsa.workspace = true
indexmap.workspace = true
bumpalo.workspace = true

[dev-dependencies]
indoc.workspace = true
